# CTS_SAT_1_COMMUNICATIONS

./: .gitignore  ARCHITECTURE.md  CHEATSHEET.md  DESIGN_PLAN.md  INSTALL TRANSCIEVER INSTRUCTIONS.txt  README.md  cts_1_bootldr.py  easycsp_bootldr.py  pycsp.py  pycsp_rx.ipynb  pycsp_rx.py  pycsp_tx.ipynb  pycsp_tx.py  pycsplink.py  radio_ax100.grc  radio_ax100.py
Ground_Station/01 Router/: README.md  client.py  echo.py  mpi_202601201619.txt  router.py
Ground_Station/01 Router/MPI packets/: mpi_202601201608.txt  mpi_202601201617.txt  mpi_202601201619.txt  mpi_202601201620.txt
Ground_Station/01 Router/telecommands/: telecommands_2025-04-29_18-54.csv  telecommands_2025-05-07_12-16.csv  telecommands_2025-05-30_00-50.csv  telecommands_2025-05-30_00-52.csv  telecommands_2025-07-05_11-38.csv  telecommands_2025-07-05_11-38.xlsx  telecommands_2025-07-23_17-07.csv  telecommands_2025-07-23_17-07.xlsx
Working_Python_Files/: INSTALL TRANSCIEVER INSTRUCTIONS.txt  README.md  pycsp.py  pycsp_gateway.py  pycsp_rx.ipynb  pycsp_rx.py  pycsp_tx.py  pycsplink.py  radio_ax100.grc  radio_ax100.py  radio_ax100_icom.grc  radio_ax100_icom.py  requirements.txt
downlink/: downlink.grc
pycsp/: IMPLEMENTATION.md  pyproject.toml  requirements.txt
pycsp/examples/: simple_loopback.py
pycsp/src/pycsp/: __init__.py  daemon.py  link.py  packet.py  rdp.py  route.py  socket.py  transport.py
telecommands/: telecommands_2025-07-23_17-07.csv
